$Id$

Summary of Changes for Duro

Changes for Duro 0.9

- Small change to RDB_expression struct.

Changes for Duro 0.8

- Introduced error code RDB_ATTRIBUTE_NOT_FOUND.

- Implemented RDB_insert() for RENAME, WRAP, UNWRAP tables.

- Implemented RDB_project_tuple() and RDB_join_tuples().

- Implemented RDB_update() for selection tables.

- Implemented RDB_delete() for EXTEND tables.

- Implemented RDB_create_table_index() and RDB_drop_table_index().

- Implemented RDB_table_equals().

- Implemented RDB_expr_contains().

- RDB_create_table() does now more complete argument checking.

- Added query optimizer.

- RDB_binary_get() now returns a pointer to the data instead of copying it.

- Now allowing nonscalar types as operator argument and return types.

- Now allowing nonscalar types as actual representations.

- Added SUBSET operator.

- Implemented GROUP and UNGROUP.

- Implemented support for system-implemented user-defined types with
  more than one possrep component.

- Changed RDB_create_tuple_type() and RDB_create_relation_type(), which now
  return an error code.

- Changed argument order of RDB_extract_tuple() and RDB_call_ro_op().

- Implemented relation-valued table attributes.

- Implemented array-valued attributes and RDB_create_array_type().

- Removed the libname argument from RDB_implement_type(). Selectors,
  getters, and setters are now created using RDB_create_ro_op() and
  RDB_create_update_op().

- Removed RDB_select_obj() and RDB_selector(). Use RDB_call_ro_op() and
  RDB_user_op() instead.

- Removed RDB_create_env().

- Implemented duro::table attrs.

- Implemented RDB_get_dbs() and duro::env dbs.

- Changed semantics of duro::operator create.

- Implemented GUI admin tool.

- duro::insert now raises an error if the tuple is already an element of the
  table.

- duro::array index and duro:array foreach now take a
  transaction argument.

- Durotcl functions now set errorCode.
